# dagyo

./: .dockerignore  .gitignore  Cargo.toml  LICENSE-MIT  README.md  all.dockerfile  build.rs  justfile  k8s-manifest.yaml
sample-progdefs/: dagyodef.json  procedures.toml  vertspec.toml
sample-progdefs/multiple/: .dockerignore  all.dockerfile  common.py  greet.dockerfile  greet.py  justfile  pyproject.toml  source.dockerfile  source.py  unordered_cartesian_product.py  void_sink.py
src/: common.rs  config.rs  docker.rs  flow.rs  kubestuff.rs  lib.rs  main.rs  queue.rs  vertspec.rs
