[package]
name = "dagyo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
bollard = "0.14.0"
clap = { version = "4.1.4", features = ["derive", "env"] }
futures = "0.3.26"
k8s-openapi = { version = "0.17.0", features = ["v1_26"] }
kube = { version = "0.78.0", features = ["runtime", "derive"] }
lapin = "2.1.1"
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
sha2 = "0.10.6"
tar = "0.4.38"
tokio = { version = "1.25.0", features = ["full"] }
toml = "0.7.1"
tap = "1.0.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
petgraph = "0.6.2"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
