[package]
name = "dagyo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.2", features = ["derive", "env"] }
futures = "0.3.28"
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
kube = { version = "0.83.0", default-features = false, features = ["runtime", "derive", "ws", "rustls-tls", "client"] }
lapin = "2.2.1"
serde_json = "1.0.96"
serde = { version = "1.0.164", features = ["derive"] }
sha2 = "0.10.6"
tar = "0.4.38"
tokio = { version = "1.28.2", features = ["full"] }
toml = "0.7.4"
tap = "1.0.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
petgraph = "0.6.3"
uuid = { version = "1.3.3", features = ["serde", "v4"] }
amqp = "0.1.3"
schemars = "0.8.12"
thiserror = "1.0.40"
itertools = "0.10.5"